objects/OSM_Order_Item_License__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Key__c</fullName>
        <label>Activation Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Order_Item__c</fullName>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipName>OSM_Oreder_Item_Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsCancelCalledSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelCalledSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRevokeAPISuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRevokeAPISuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OMS_Item_Id__c</fullName>
        <label>OMS Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Order_ID__c</fullName>
        <label>OMS_Order_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSMOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSMOrderId</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>OSM Order Item Licenses</relationshipLabel>
        <relationshipName>OSM_Order_Item_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Activation_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSM Order Item License</label>
        <referenceTo>OSM_Order_Item_License__c</referenceTo>
        <relationshipLabel>OSM Order Item Licenses (OSM Order Item License)</relationshipLabel>
        <relationshipName>OSM_Order_Item_Licenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>CC_Order_Item__r.ccrz__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revoked_ReIssue_Lisence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revoked &amp; ReIssue Lisence</label>
        <referenceTo>OSM_Order_Item_License__c</referenceTo>
        <relationshipLabel>OSM Order Item Licenses</relationshipLabel>
        <relationshipName>OSM_Order_Item_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Revoked/ReIssue</fullName>
                </value>
                <value>
                    <fullName>ReIssued</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Revoke/ReIssue Pending</fullName>
                </value>
                <value>
                    <fullName>Create And Get Done</fullName>
                </value>
                <value>
                    <fullName>Create And Get Failed</fullName>
                </value>
                <value>
                    <fullName>Revoke Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tool_Instance_Id__c</fullName>
        <label>Tool Instance Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tool_Instance_Key__c</fullName>
        <label>Tool Instance Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Tool instance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OSM Order Item License</label>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>OSM License Activation  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSM Order Item Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>